add articles show

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     </nav>
   </div>
 
-  <main ng-view></main>
+  <main class="row" ng-view></main>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
@@ -46,5 +46,6 @@
   <script src="app.js"></script>
   <script src="articles/articlesIndex.controller.js"></script>
   <script src="articles/articlesNew.controller.js"></script>
+  <script src="articles/articlesShow.controller.js"></script>
 </body>
 </html>
