add 'nw-comment' directive

--- a/app/index.html
+++ b/app/index.html
@@ -47,5 +47,6 @@
   <script src="articles/articlesIndex.controller.js"></script>
   <script src="articles/articlesNew.controller.js"></script>
   <script src="articles/articlesShow.controller.js"></script>
+  <script src="comments/comments.directive.js"></script>
 </body>
 </html>
